Bug 1923831 - Mark minimization tests as failing on Wayland. r=webdriver-reviewers,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D226616

UltraBlame original commit: 571747a2c68be75e26e0b3b37c5ed51073133686

--- a/testing/web-platform/meta/webdriver/tests/classic/fullscreen_window/from_minimized_window.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/fullscreen_window/from_minimized_window.py.ini
@@ -15,3 +15,39 @@ android
 :
 Not
 supported
+[
+test_fullscreen_from_minimized_window
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
