--- a/testing/web-platform/meta/webdriver/tests/classic/minimize_window/user_prompts.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/minimize_window/user_prompts.py.ini
@@ -26,25 +26,39 @@ True
 \
 ]
 ]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
 expected
 :
 if
-(
-os
+display
 =
 =
 "
-win
+wayland
 "
-)
 and
 not
-swgl
+headless
 :
-[
-PASS
 FAIL
-]
 [
 test_accept
 [
@@ -55,25 +69,39 @@ prompt
 \
 ]
 ]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
 expected
 :
 if
-(
-os
+display
 =
 =
 "
-win
+wayland
 "
-)
 and
 not
-swgl
+headless
 :
-[
-PASS
 FAIL
-]
 [
 test_dismiss
 [
@@ -85,25 +113,39 @@ False
 \
 ]
 ]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
 expected
 :
 if
-(
-os
+display
 =
 =
 "
-win
+wayland
 "
-)
 and
 not
-swgl
+headless
 :
-[
-PASS
 FAIL
-]
 [
 test_dismiss
 [
@@ -115,22 +157,36 @@ None
 \
 ]
 ]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
 expected
 :
 if
-(
-os
+display
 =
 =
 "
-win
+wayland
 "
-)
 and
 not
-swgl
+headless
 :
-[
-PASS
 FAIL
-]
