--- a/testing/web-platform/meta/webdriver/tests/classic/maximize_window/from_minimized_window.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/maximize_window/from_minimized_window.py.ini
@@ -15,3 +15,39 @@ android
 :
 Not
 supported
+[
+test_restore_from_minimized
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
