--- a/testing/web-platform/meta/webdriver/tests/classic/minimize_window/stress.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/minimize_window/stress.py.ini
@@ -15,3 +15,163 @@ android
 :
 Not
 supported
+[
+test_stress
+[
+1
+\
+]
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
+[
+test_stress
+[
+2
+\
+]
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
+[
+test_stress
+[
+3
+\
+]
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
+[
+test_stress
+[
+4
+\
+]
+]
+bug
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1923833
+expected
+:
+if
+display
+=
+=
+"
+wayland
+"
+and
+not
+headless
+:
+FAIL
