Bug 1926296 - Add telemetry record for add-ons onboarding card onClick r=android-reviewers,amejiamarmol
Differential Revision: https://phabricator.services.mozilla.com/D226633

UltraBlame original commit: b1b9854655604a0ae0caa197e5260a09104346aa

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -9260,7 +9260,7 @@ tags
 :
 -
 Onboarding
-add_ons_card_clicked
+add_ons_card_button_pressed
 :
 type
 :
@@ -9269,10 +9269,12 @@ description
 :
 The
 user
-clicked
+pressed
 the
+"
 start
 browsing
+"
 button
 from
 the
@@ -9281,6 +9283,70 @@ add
 ons
 onboarding
 card
+.
+extra_keys
+:
+element_type
+:
+type
+:
+string
+description
+:
+|
+Type
+of
+element
+that
+was
+viewed
+.
+action
+:
+type
+:
+string
+description
+:
+|
+Type
+of
+action
+taken
+by
+the
+user
+.
+sequence_position
+:
+type
+:
+string
+description
+:
+|
+Position
+of
+the
+onboarding
+card
+in
+the
+onboarding
+flow
+.
+sequence_id
+:
+type
+:
+string
+description
+:
+|
+Identifier
+for
+the
+sequence
 .
 bugs
 :
@@ -9302,6 +9368,24 @@ cgi
 id
 =
 1926243
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1926296
 data_reviews
 :
 -
@@ -9318,6 +9402,20 @@ mozilla
 com
 /
 D226469
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D226633
 data_sensitivity
 :
 -
