Backed out 10 changesets (bug 1879401, bug 1915351) for causing multiple regressions. CLOSED TREE
Backed out changeset 574d567bbbf1 (bug 1915351)
Backed out changeset 4fcb7eea243f (bug 1915351)
Backed out changeset aa0e2ce8cf21 (bug 1915351)
Backed out changeset 1cf3847d73a7 (bug 1915351)
Backed out changeset fba6942240ea (bug 1915351)
Backed out changeset c5279472391f (bug 1915351)
Backed out changeset a20adf8d4516 (bug 1915351)
Backed out changeset 2b900eb520ce (bug 1915351)
Backed out changeset a8b2b1f62ae6 (bug 1915351)
Backed out changeset 989b843531f8 (bug 1879401)

UltraBlame original commit: 19214f0d561fce22ab4108f5e175bfc404a12aae

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -692,45 +692,10 @@ GetClipboard
 ]
 description
 =
-Called
-from
-PContent
-:
-:
-GetClipboard
-which
-is
-a
-legacy
+Legacy
 synchronous
 clipboard
 API
-[
-PClipboardContentAnalysis
-:
-:
-GetAllClipboardDataSync
-]
-description
-=
-Called
-from
-synchronous
-DataTransfer
-constructor
-[
-PClipboardReadRequest
-:
-:
-GetDataSync
-]
-description
-=
-Called
-from
-synchronous
-DataTransfer
-constructor
 [
 PContent
 :
