Bug 1926867: Add some useful mocking tools and get most tests passing. r=jhirsch
Also avoids overriding directory service items in browser tests for safety.

Differential Revision: https://phabricator.services.mozilla.com/D226783

UltraBlame original commit: d9d8c48a9af6c057b07e827d7bccbf0d93b65e16

--- a/browser/components/profiles/tests/unit/xpcshell.toml
+++ b/browser/components/profiles/tests/unit/xpcshell.toml
@@ -4,6 +4,32 @@ DEFAULT
 head
 =
 "
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+toolkit
+/
+profile
+/
+test
+/
+xpcshell
+/
+head
+.
+js
 head
 .
 js
