Bug 1925104 - Adjust skip-if condition on Linux Wayland for test 'browser_media_control_position_state.js'. CLOSED TREE
UltraBlame original commit: 2e90a54a8f7657f11a84a00e2907672686ee025c

--- a/dom/media/mediacontrol/tests/browser/browser.toml
+++ b/dom/media/mediacontrol/tests/browser/browser.toml
@@ -351,6 +351,35 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+#
+Bug
+1673527
+"
+os
+=
+=
+'
 mac
 '
 &
@@ -375,10 +404,10 @@ x86_64
 &
 opt
 "
-]
 #
 Bug
 1775892
+]
 [
 "
 browser_media_control_seek
