--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -86363,6 +86363,18 @@ is_first_run
 type
 :
 boolean
+event_query_values
+:
+type
+:
+object
+properties
+:
+days_opened_in_last_28
+:
+type
+:
+number
 #
 Campaign
 source
