--- a/python/mozperftest/perfdocs/config.yml
+++ b/python/mozperftest/perfdocs/config.yml
@@ -337,3 +337,34 @@ Update
 :
 "
 "
+dom
+/
+media
+/
+webcodecs
+/
+test
+/
+performance
+:
+description
+:
+"
+Performance
+tests
+running
+through
+Mochitest
+for
+WebCodecs
+"
+tests
+:
+"
+WebCodecs
+Video
+Encoding
+"
+:
+"
+"
