Bug 1927232 - Fix Android WebCodecs WPT annotations. r=media-playback-reviewers,alwu
Differential Revision: https://phabricator.services.mozilla.com/D226969

UltraBlame original commit: 5e6a86406ad504e586f487d95e719390500af271

--- a/testing/web-platform/meta/webcodecs/videoFrame-construction.crossOriginSource.sub.html.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-construction.crossOriginSource.sub.html.ini
@@ -32,17 +32,6 @@ TIMEOUT
 FAIL
 ]
 [
-videoFrame
--
-construction
-.
-crossOriginSource
-.
-sub
-.
-html
-]
-[
 Test
 creating
 a
@@ -67,6 +56,18 @@ linux
 )
 and
 debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+android
+"
 :
 [
 PASS
@@ -97,6 +98,83 @@ linux
 )
 and
 debug
+:
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+android
+"
+:
+[
+PASS
+FAIL
+]
+[
+Test
+creating
+a
+VideoFrame
+with
+a
+CORS
+enabled
+cross
+-
+origin
+HTMLVideoElement
+without
+setting
+crossorigin
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+[
+PASS
+FAIL
+]
+[
+Test
+creating
+a
+VideoFrame
+with
+a
+CORS
+enabled
+cross
+-
+origin
+HTMLVideoElement
+with
+crossorigin
+=
+"
+anonymous
+"
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
 :
 [
 PASS
