--- a/testing/web-platform/meta/webcodecs/video-decoder.https.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/video-decoder.https.any.js.ini
@@ -293,6 +293,81 @@ spaces
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+PASS
+NOTRUN
+]
+[
+Test
+that
+VideoDecoder
+.
+isConfigSupported
+(
+)
+accepts
+config
+:
+variant
+1
+of
+h264
+codec
+string
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+PASS
+NOTRUN
+]
+[
+Test
+that
+VideoDecoder
+.
+isConfigSupported
+(
+)
+accepts
+config
+:
+variant
+2
+of
+h264
+codec
+string
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
 [
 PASS
 NOTRUN
@@ -594,6 +669,81 @@ spaces
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+PASS
+NOTRUN
+]
+[
+Test
+that
+VideoDecoder
+.
+isConfigSupported
+(
+)
+accepts
+config
+:
+variant
+1
+of
+h264
+codec
+string
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+PASS
+NOTRUN
+]
+[
+Test
+that
+VideoDecoder
+.
+isConfigSupported
+(
+)
+accepts
+config
+:
+variant
+2
+of
+h264
+codec
+string
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
 [
 PASS
 NOTRUN
