Bug 1926655 [wpt PR 48780] - Update wpt metadata, a=testonly
wpt-pr: 48780
wpt-type: metadata

UltraBlame original commit: ffdc4fc46d1ab175d6c52d91cff90bc2d6c0bc1a

--- a/testing/web-platform/meta/webauthn/getclientcapabilities.https.html.ini
+++ b/testing/web-platform/meta/webauthn/getclientcapabilities.https.html.ini
@@ -17,3 +17,25 @@ sorted
 expected
 :
 FAIL
+[
+Capabilities
+object
+has
+sorted
+keys
+and
+boolean
+values
+]
+expected
+:
+FAIL
+[
+Capabilities
+keys
+are
+known
+]
+expected
+:
+FAIL
