Bug 1927238 [wpt PR 48827] - Update wpt metadata, a=testonly
wpt-pr: 48827
wpt-type: metadata

UltraBlame original commit: 69de15bae4f364ab16f12080cc1d82ce40bfb6cd

--- a/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-popover.html.ini
+++ b/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-popover.html.ini
@@ -44,3 +44,32 @@ order
 expected
 :
 FAIL
+[
+Popover
+is
+reading
+-
+flow
+item
+.
+]
+expected
+:
+FAIL
+[
+Popover
+is
+reading
+-
+flow
+item
+and
+reading
+-
+flow
+container
+.
+]
+expected
+:
+FAIL
