--- a/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order.html.ini
+++ b/testing/web-platform/meta/shadow-dom/focus-navigation/reading-flow/tentative/grid-order.html.ini
@@ -43,3 +43,31 @@ container
 expected
 :
 FAIL
+[
+Grid
+items
+with
+order
+property
+and
+tabindex
+.
+Positive
+tabindex
+doesn
+'
+t
+reorder
+reading
+flow
+item
+but
+can
+affect
+its
+descendants
+.
+]
+expected
+:
+FAIL
