Bug 1927256 - [wpt-sync] Update web-platform-tests to d840df7700c795923756a7b06261dfe702c1708a, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: d840df7700c795923756a7b06261dfe702c1708a
wpt-type: landing

UltraBlame original commit: 21f9a49e5ac27a247a59b0dca1c432c7264720a3

--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-same-origin-allow-popups.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-allow-popups-to-same-origin-allow-popups.https.html.ini
@@ -1264,54 +1264,12 @@ last
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-debug
-and
-swgl
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-and
-not
-swgl
-:
-[
-TIMEOUT
-OK
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 [
 OK
@@ -1396,15 +1354,37 @@ html
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
 :
 [
 OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+OK
+ERROR
 TIMEOUT
 ]
 [
@@ -1486,33 +1466,12 @@ html
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
 :
 [
 OK
