--- a/testing/web-platform/meta/requestidlecallback/deadline-max-rAF-dynamic.html.ini
+++ b/testing/web-platform/meta/requestidlecallback/deadline-max-rAF-dynamic.html.ini
@@ -39,12 +39,6 @@ linux
 "
 )
 and
-not
-asan
-and
-not
-debug
-and
 (
 processor
 =
@@ -56,32 +50,13 @@ x86_64
 and
 not
 tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-asan
 and
 debug
 and
+not
 fission
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -99,14 +74,11 @@ processor
 =
 =
 "
-x86
+x86_64
 "
 )
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
@@ -117,21 +89,42 @@ linux
 "
 )
 and
-asan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+tsan
 :
-[
 PASS
-FAIL
-]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+:
+PASS
 if
 os
 =
 =
 "
-mac
+android
 "
 :
-[
-FAIL
 PASS
+[
+PASS
+FAIL
 ]
