--- a/testing/web-platform/meta/webrtc/__dir__.ini
+++ b/testing/web-platform/meta/webrtc/__dir__.ini
@@ -79,6 +79,21 @@ poll_interval_ms
 :
 2000
 ]
+leak
+-
+threshold
+:
+[
+default
+:
+3020800
+rdd
+:
+51200
+tab
+:
+51200
+]
 lsan
 -
 allowed
@@ -188,19 +203,6 @@ sctp_alloc_hmaclist
 sctp_alloc_sharedkey
 sctp_hashinit_flags
 sctp_inpcb_alloc
-]
-leak
--
-threshold
-:
-[
-default
-:
-3020800
-rdd
-:
-51200
-tab
-:
-51200
+unknown
+stack
 ]
