--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -10,18 +10,32 @@ html
 expected
 :
 if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 not
-tsan
+debug
 and
 (
 processor
 =
 =
 "
-x86_64
+x86
 "
 )
-and
+:
+[
+OK
+ERROR
+]
+if
 (
 os
 =
@@ -36,33 +50,6 @@ debug
 and
 not
 asan
-:
-[
-OK
-ERROR
-]
-if
-not
-tsan
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-not
-debug
-:
-[
-OK
-ERROR
-]
-if
-tsan
 :
 [
 OK
