--- a/testing/web-platform/meta/xhr/send-sync-timeout.htm.ini
+++ b/testing/web-platform/meta/xhr/send-sync-timeout.htm.ini
@@ -11,17 +11,25 @@ expected
 :
 if
 (
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
 os
 =
 =
 "
-android
+linux
 "
 )
-and
-fission
 :
 [
 OK
-TIMEOUT
+ERROR
+CRASH
 ]
