Bug 1927321 - [wpt-sync] Update web-platform-tests to 73d6bd0d61f0ad5341d0c2303a7638e3aa12a594, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 73d6bd0d61f0ad5341d0c2303a7638e3aa12a594
wpt-type: landing

UltraBlame original commit: 5e42ddcef6cf3d8e93dfa7c1647aa17fe9a75722

--- a/testing/web-platform/meta/IndexedDB/get-databases.any.js.ini
+++ b/testing/web-platform/meta/IndexedDB/get-databases.any.js.ini
@@ -89,6 +89,22 @@ asan
 PASS
 FAIL
 ]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 [
 get
 -
@@ -141,26 +157,14 @@ commited
 expected
 :
 if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 not
 fission
 and
 not
+asan
+and
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
 (
 os
 =
@@ -169,8 +173,34 @@ os
 android
 "
 )
+:
+[
+PASS
+FAIL
+]
+if
+fission
+and
+(
+os
+=
+=
+"
+mac
+"
+)
 and
 debug
+:
+[
+PASS
+FAIL
+]
+if
+not
+fission
+and
+asan
 :
 [
 PASS
