--- a/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
+++ b/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
@@ -17,10 +17,10 @@ linux
 "
 )
 and
-debug
+fission
 and
 not
-fission
+debug
 :
 [
 OK
@@ -37,11 +37,11 @@ linux
 )
 and
 not
-debug
+fission
 :
 [
-OK
 TIMEOUT
+OK
 ]
 [
 Return
@@ -503,6 +503,7 @@ not
 fission
 :
 [
+TIMEOUT
 PASS
 NOTRUN
 ]
@@ -518,10 +519,33 @@ linux
 and
 not
 debug
+and
+fission
 :
 [
 PASS
 TIMEOUT
+NOTRUN
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+fission
+:
+[
+TIMEOUT
+PASS
 NOTRUN
 ]
 [
