--- a/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
@@ -305,8 +305,8 @@ mac
 "
 :
 [
-TIMEOUT
 FAIL
+TIMEOUT
 ]
 if
 os
@@ -367,8 +367,9 @@ mac
 "
 :
 [
-NOTRUN
 TIMEOUT
+NOTRUN
+FAIL
 ]
 NOTRUN
 [
@@ -399,6 +400,18 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+mac
+"
+:
+[
+NOTRUN
+TIMEOUT
+]
 NOTRUN
 [
 Policy
