--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
@@ -15,6 +15,15 @@ expected
 :
 if
 (
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
 os
 =
 =
@@ -38,15 +47,6 @@ ERROR
 ]
 if
 (
-os
-=
-=
-"
-win
-"
-)
-and
-(
 processor
 =
 =
@@ -54,12 +54,7 @@ processor
 x86_64
 "
 )
-:
-[
-OK
-ERROR
-]
-if
+and
 (
 os
 =
@@ -70,6 +65,81 @@ linux
 )
 and
 tsan
+:
+[
+OK
+ERROR
+]
+if
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+not
+debug
+and
+(
+os
+=
+=
+"
+win
+"
+)
+:
+[
+OK
+ERROR
+]
+if
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+not
+debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+OK
+ERROR
+]
+if
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
+os
+=
+=
+"
+win
+"
+)
 :
 [
 OK
@@ -122,19 +192,25 @@ os
 =
 =
 "
-linux
+win
 "
 )
 and
 not
-fission
-and
-not
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -145,6 +221,35 @@ os
 win
 "
 )
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
 and
 not
 debug
