--- a/testing/web-platform/meta/html/semantics/popovers/popover-hidden-display.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-hidden-display.html.ini
@@ -10,19 +10,44 @@ html
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
 =
 "
-win
+mac
 "
 )
+and
+debug
 :
-PASS
+FAIL
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+FAIL
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+FAIL
 if
 (
 os
@@ -35,19 +60,22 @@ android
 and
 not
 debug
-and
-not
-fission
 :
 [
+FAIL
 PASS
 TIMEOUT
 ]
 if
-debug
+os
+=
+=
+"
+win
+"
 :
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
