--- a/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss-scroll-within.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-light-dismiss-scroll-within.html.ini
@@ -30,55 +30,13 @@ os
 =
 =
 "
-linux
+mac
 "
 )
-and
-not
-fission
 and
 debug
 :
-[
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-fission
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-fission
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -89,10 +47,19 @@ android
 "
 )
 and
-not
 debug
 :
-[
-PASS
 FAIL
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+[
+FAIL
+PASS
 ]
