--- a/testing/web-platform/meta/html/semantics/popovers/popover-shadow-dom-anchor.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-shadow-dom-anchor.tentative.html.ini
@@ -26,3 +26,49 @@ tree
 expected
 :
 FAIL
+[
+anchor
+references
+do
+not
+cross
+shadow
+boundaries
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
