--- a/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-combinations.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-combinations.html.ini
@@ -51,9 +51,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Popover
 combination
@@ -78,9 +97,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Popover
 combination
@@ -109,6 +147,117 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Popover
+combination
+:
+Open
+Non
+-
+modal
+Popover
+Dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Popover
+combination
+:
+Popover
+Dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
