--- a/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-interactions.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-interactions.html.ini
@@ -57,9 +57,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 A
 Modal
@@ -155,9 +174,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 A
 Modal
@@ -224,3 +262,143 @@ debug
 PASS
 NOTRUN
 ]
+[
+A
+Popover
+should
+close
+a
+Popover
+.
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+A
+Fullscreen
+Element
+should
+close
+a
+Popover
+.
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+A
+Modal
+Dialog
+should
+close
+a
+Popover
+.
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
