--- a/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting-hints.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting-hints.tentative.html.ini
@@ -245,9 +245,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Unrelated
 hint
@@ -281,9 +300,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 auto
@@ -320,9 +358,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 auto
@@ -348,9 +405,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Unrelated
 hint
@@ -384,9 +460,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 auto
@@ -420,9 +515,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 auto
@@ -459,9 +573,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Unrelated
 hint
@@ -495,6 +628,325 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Nested
+auto
+/
+hint
+ancestors
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+hint
+ancestor
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+hint
+ancestor
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+hint
+ancestor
+with
+fullscreen
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Nested
+auto
+/
+hint
+ancestors
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+hint
+ancestor
+with
+fullscreen
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
