--- a/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-top-layer-nesting.html.ini
@@ -52,9 +52,44 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Single
 popover
@@ -87,9 +122,44 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Single
 popover
@@ -114,8 +184,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -131,9 +201,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Single
 popover
@@ -166,8 +255,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -183,9 +272,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -210,8 +318,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -227,9 +335,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -262,8 +389,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -279,9 +406,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -309,8 +455,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -326,9 +472,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -364,8 +529,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -381,9 +546,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Top
 layer
@@ -409,8 +593,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -426,9 +610,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Top
 layer
@@ -462,8 +665,8 @@ and
 debug
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -479,9 +682,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -515,9 +737,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -554,9 +795,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -585,9 +845,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Nested
 popover
@@ -613,9 +892,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Top
 layer
@@ -650,9 +948,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Top
 layer
@@ -679,6 +996,225 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+manual
+ancestor
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+auto
+ancestor
+with
+dialog
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+auto
+ancestor
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Single
+popover
+=
+manual
+ancestor
+with
+dialog
+top
+layer
+element
+*
+is
+*
+a
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
