--- a/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/unregister.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/unregister.https.html.ini
@@ -13,6 +13,15 @@ worker
 ]
 expected
 :
+if
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -22,6 +31,15 @@ evaluation
 ]
 expected
 :
+if
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -31,6 +49,15 @@ event
 ]
 expected
 :
+if
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -40,4 +67,13 @@ event
 ]
 expected
 :
+if
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
