--- a/testing/web-platform/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-mediastreamaudiosourcenode-interface/mediastreamaudiosourcenode-routing.html.ini
@@ -13,13 +13,39 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
 [
-TIMEOUT
 OK
+TIMEOUT
+]
+[
+MediaStreamAudioSourceNode
+captures
+the
+right
+track
+.
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+TIMEOUT
 ]
