--- a/testing/web-platform/meta/css/css-shadow-parts/pseudo-classes-after-part.html.ini
+++ b/testing/web-platform/meta/css/css-shadow-parts/pseudo-classes-after-part.html.ini
@@ -298,3 +298,59 @@ selector
 expected
 :
 FAIL
+[
+"
+:
+:
+part
+(
+mypart
+)
+:
+popover
+-
+open
+"
+should
+be
+a
+valid
+selector
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
