--- a/testing/web-platform/meta/encrypted-media/clearkey-mp4-syntax-mediakeysession.https.html.ini
+++ b/testing/web-platform/meta/encrypted-media/clearkey-mp4-syntax-mediakeysession.https.html.ini
@@ -26,8 +26,6 @@ and
 not
 debug
 and
-fission
-and
 (
 processor
 =
@@ -51,185 +49,9 @@ win
 "
 )
 and
-swgl
+debug
 :
 [
 OK
 TIMEOUT
 ]
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-remove
-(
-)
-exceptions
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-generateRequest
-(
-)
-exceptions
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-update
-(
-)
-exceptions
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-attribute
-syntax
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-if
-MediaKeySession
-generateRequest
-(
-)
-resolves
-for
-various
-sessions
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-close
-(
-)
-exceptions
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-org
-.
-w3
-.
-clearkey
-test
-MediaKeySession
-load
-(
-)
-exceptions
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
