--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html.ini
@@ -449,3 +449,215 @@ modal
 expected
 :
 FAIL
+[
+invoking
+(
+as
+close
+)
+dialog
+as
+open
+popover
+=
+manual
+is
+noop
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+invoking
+(
+as
+close
+)
+dialog
+as
+open
+popover
+=
+auto
+is
+noop
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+invoking
+(
+as
+show
+-
+modal
+)
+dialog
+as
+open
+popover
+=
+manual
+is
+noop
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+invoking
+(
+as
+show
+-
+modal
+)
+dialog
+as
+open
+popover
+=
+auto
+is
+noop
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
