--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -23,9 +23,6 @@ popovers
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -35,49 +32,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -85,17 +50,37 @@ and
 not
 tsan
 :
-PASS
+FAIL
 if
-not
-debug
-and
 (
 os
 =
 =
 "
 win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -108,24 +93,10 @@ x86
 "
 )
 :
-PASS
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
-:
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
 [
 The
@@ -145,9 +116,6 @@ popovers
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -157,49 +125,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -207,17 +143,37 @@ and
 not
 tsan
 :
-PASS
+FAIL
 if
-not
-debug
-and
 (
 os
 =
 =
 "
 win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -230,24 +186,10 @@ x86
 "
 )
 :
-PASS
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
-:
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
 [
 The
@@ -267,9 +209,6 @@ transition
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -279,49 +218,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -329,17 +236,37 @@ and
 not
 tsan
 :
-PASS
+FAIL
 if
-not
-debug
-and
 (
 os
 =
 =
 "
 win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -352,24 +279,10 @@ x86
 "
 )
 :
-PASS
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
-:
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
 [
 The
@@ -387,9 +300,6 @@ removal
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -399,49 +309,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -449,17 +327,37 @@ and
 not
 tsan
 :
-PASS
+FAIL
 if
-not
-debug
-and
 (
 os
 =
 =
 "
 win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -472,24 +370,10 @@ x86
 "
 )
 :
-PASS
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
-:
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
 [
 The
@@ -503,9 +387,6 @@ coalesced
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -515,49 +396,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -565,17 +414,37 @@ and
 not
 tsan
 :
-PASS
+FAIL
 if
-not
-debug
-and
 (
 os
 =
 =
 "
 win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -588,22 +457,8 @@ x86
 "
 )
 :
-PASS
-if
-not
-debug
-and
-(
-os
-=
-=
-"
-mac
-"
-)
-:
-PASS
-[
-PASS
 FAIL
+[
+FAIL
+PASS
 ]
