--- a/testing/web-platform/meta/html/semantics/popovers/popover-focus-2.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-focus-2.html.ini
@@ -104,6 +104,24 @@ FAIL
 PASS
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Circular
 reference
@@ -191,6 +209,7 @@ x86_64
 )
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
@@ -208,9 +227,28 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
 [
 Popover
 focus
@@ -250,6 +288,7 @@ x86_64
 )
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
@@ -267,6 +306,25 @@ not
 debug
 :
 [
+FAIL
 PASS
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
