--- a/testing/web-platform/meta/html/semantics/popovers/popover-open-overflow-display-2.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-open-overflow-display-2.html.ini
@@ -16,3 +16,267 @@ max
 asserts
 :
 2
+[
+Absolute
+element
+inside
+absolute
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Absolute
+popover
+inside
+absolute
+element
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Fixed
+element
+inside
+absolute
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Fixed
+popover
+inside
+fixed
+element
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Absolute
+popover
+inside
+fixed
+element
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
+[
+Fixed
+element
+inside
+fixed
+popover
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+FAIL
+PASS
+]
+FAIL
